# financemanagement

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  seed_test_data.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 64b509ccd311_create_categories_table.py  6549657f85c9_add_kind_to_categories.py  8a7b3c2d1e4f_create_transactions_table.py  9cb96c11c799_create_accounts_table.py  a3b1c5d9e7f2_add_effective_from_to_budgets.py  a5537f54ab55_create_exchange_rates_table.py  b2b7542ac735_add_kind_and_note_to_accounts.py  b8d4c2e6f1a9_redesign_budgets_to_per_month.py  c1f2a3b4d5e6_create_recurring_transactions_table.py  d1e9a2c5b7f3_add_opening_balance_and_date_to_accounts.py  d4e8f1a02b73_add_email_verification_and_tokens.py  e7c8f4a92d50_create_budgets_table.py  f26b7fd0df51_create_users_table.py  f3a9c1e2d5b8_add_target_amount_to_transactions.py
backend/app/: __init__.py  config.py  main.py  security.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  accounts.py  auth.py  budgets.py  categories.py  dashboard.py  export.py  rates.py  recurring_transactions.py  reports.py  transactions.py  users.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  account.py  budget.py  category.py  email_token.py  exchange_rate.py  (+3 more)
backend/app/schemas/: __init__.py  account.py  budget.py  category.py  rate.py  recurring_transaction.py  token.py  transaction.py  user.py
backend/app/services/: __init__.py  cbr_rates.py  email.py  ledger.py  recurrence.py  tokens.py
backend/loadtest/: locustfile.py
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_auth_email.py  test_auth_hardening.py  test_budgets.py  test_categories.py  test_category_move.py  test_correctness_hardening.py  test_dashboard.py  test_export.py  test_health.py  test_rates.py  test_recurring.py  test_recurring_concurrency.py  test_reports.py  test_system_e2e.py  test_transactions.py  test_transfers_crosscurrency.py  test_unit_budgets.py  test_unit_security.py
(+45 files in other folders)
