[project]                                                       
  name = "fintrack-backend"
  version = "0.1.0"                                                                                                                    
  description = "FinTrack — backend для веб-приложения учёта личных финансов"
  requires-python = ">=3.11"                                                                                                           
  authors = [                                                     
      { name = "Dmitry Frank", email = "doctorw811@gmail.com" },                                                                       
  ]
  license = { text = "MIT" }                                                                                                           
  dependencies = [                                                                                                                     
      "fastapi[standard]>=0.110",
  ]                                                                                                                                    
                                                                  
  [project.optional-dependencies]
  dev = [
      "pytest>=8.0",                                                                                                                   
      "pytest-asyncio>=0.23",
      "httpx>=0.27",                                                                                                                   
      "ruff>=0.5",                                                
      "mypy>=1.10",
  ]                                                                                                                                    
   
  [build-system]                                                                                                                       
  requires = ["setuptools>=68"]                                   
  build-backend = "setuptools.build_meta"

  [tool.setuptools.packages.find]
  include = ["app*"]